--- a/Budgeting/Views/Budget/BudgetIndex.cshtml
+++ b/Budgeting/Views/Budget/BudgetIndex.cshtml
@@ -10,8 +10,8 @@
             <img src="~/logomark.svg" alt="" height="30" />
             <span>HomeBudget</span>
         </a>
-        <form method="post" action="http://127.0.0.1:5173/logout">
-            <button type="submit" class="btn btn-warning">
+        <form>
+            <button type="button" class="btn btn-warning" id="logout">
                 <span>Logout</span>
                 <svg xmlns="http://www.w3.org/2000/svg"
                      viewBox="0 0 24 24"
@@ -58,7 +58,7 @@
                                            inputmode="decimal" />
                                 </div>
                                 <input type="hidden" name="_action" value="createBudget" />
-                                <button type="submit" class="btn btn-dark">
+                                <button type="button" class="btn btn-dark" id="createBudget">
                                     <span>Create budget</span>
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          viewBox="0 0 24 24"
@@ -79,8 +79,7 @@
                                 <span class="accent"></span>
                                 Expense
                             </h2>
-                            <form method="post"
-                                  action="http://127.0.0.1:5173/?index"
+                            <form 
                                   class="grid-sm">
                                 <div class="expense-inputs">
                                     <div class="grid-xs">
@@ -105,7 +104,7 @@
                                 <div class="grid-xs">
                                     <label for="newExpenseBudget">Budget Category</label>
                                     <select name="newExpenseBudget"
-                                            id="newExpenseBudget"
+                                            id="category"
                                             required="">
                                         <option value="3390bd63-d070-4e41-809c-df817cf28de1">
                                             test
@@ -116,7 +115,7 @@
                                     </select>
                                 </div>
                                 <input type="hidden" name="_action" value="createExpense" />
-                                <button type="submit" class="btn btn-dark">
+                                <button type="button" class="btn btn-dark" id="addExpense">
                                     <span>Add Expense</span>
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          viewBox="0 0 24 24"
@@ -135,17 +134,17 @@
                     <div class="budgets">
                         <div class="budget" style="--accent: 0 65% 50%;">
                             <div class="progress-text">
-                                <h3>test</h3>
-                                <p>$50,000.00 Budgeted</p>
+                                <h3>Test</h3>
+                                <p>@ViewBag.TotalBudget Budgeted</p>
                             </div>
-                            <progress max="50000" value="100">0%</progress>
+                            <progress max="5000" value="100" id="progressbar_test">0%</progress>
                             <div class="progress-text">
-                                <small>$100.00 spent</small>
-                                <small>$49,900.00 remaining</small>
+                                <small>@ViewBag.TotalTest spent</small>
+                                <small>@ViewBag.TestRemaining remaining</small>
                             </div>
                             <div class="flex-sm">
-                                <a class="btn"
-                                   href="http://127.0.0.1:5173/budget/3390bd63-d070-4e41-809c-df817cf28de1">
+                                <button class="btn"
+                                   >
                                     <span>View Details</span>
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          fill="none"
@@ -158,22 +157,22 @@
                                               stroke-linejoin="round"
                                               d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 003 15h-.75M15 10.5a3 3 0 11-6 0 3 3 0 016 0zm3 0h.008v.008H18V10.5zm-12 0h.008v.008H6V10.5z"></path>
                                     </svg>
-                                </a>
+                                </button>
                             </div>
                         </div>
                         <div class="budget" style="--accent: 34 65% 50%;">
                             <div class="progress-text">
                                 <h3>Salary</h3>
-                                <p>$400,000.00 Budgeted</p>
+                                <p>@ViewBag.TotalBudget Budgeted</p>
                             </div>
-                            <progress max="400000" value="0">0%</progress>
+                            <progress max="5000" value="0" id="progressbar_salary">0%</progress>
                             <div class="progress-text">
-                                <small>$0.00 spent</small>
-                                <small>$400,000.00 remaining</small>
+                                <small>@ViewBag.TotalSalary spent</small>
+                                <small>@ViewBag.SalaryRemaining remaining</small>
                             </div>
                             <div class="flex-sm">
-                                <a class="btn"
-                                   href="http://127.0.0.1:5173/budget/35dc745c-913f-4b48-9ca6-c4251896aa2b">
+                                <button class="btn"
+                                   >
                                     <span>View Details</span>
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          fill="none"
@@ -186,61 +185,14 @@
                                               stroke-linejoin="round"
                                               d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 003 15h-.75M15 10.5a3 3 0 11-6 0 3 3 0 016 0zm3 0h.008v.008H18V10.5zm-12 0h.008v.008H6V10.5z"></path>
                                     </svg>
-                                </a>
+                                </button>
                             </div>
                         </div>
                     </div>
                     <div class="grid-md">
                         <h2>Recent Expenses</h2>
-                        <div class="table">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Amount</th>
-                                        <th>Date</th>
-                                        <th>Budget</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>test</td>
-                                        <td>$100.00</td>
-                                        <td>3/9/2023</td>
-                                        <td>
-                                            <a href="http://127.0.0.1:5173/budget/3390bd63-d070-4e41-809c-df817cf28de1"
-                                               style="--accent: 0 65% 50%;">
-                                                test
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <form method="post"
-                                                  action="http://127.0.0.1:5173/?index">
-                                                <input type="hidden"
-                                                       name="_action"
-                                                       value="deleteExpense" />
-                                                <input type="hidden"
-                                                       name="expenseId"
-                                                       value="c4da9f98-28f3-4efb-ab39-777cc90195c5" />
-                                                <button type="submit"
-                                                        class="btn btn--warning"
-                                                        aria-label="Delete test expense">
-                                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                                         viewBox="0 0 24 24"
-                                                         fill="currentColor"
-                                                         aria-hidden="true"
-                                                         width="20">
-                                                        <path fill-rule="evenodd"
-                                                              d="M16.5 4.478v.227a48.816 48.816 0 013.878.512.75.75 0 11-.256 1.478l-.209-.035-1.005 13.07a3 3 0 01-2.991 2.77H8.084a3 3 0 01-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 01-.256-1.478A48.567 48.567 0 017.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 013.369 0c1.603.051 2.815 1.387 2.815 2.951zm-6.136-1.452a51.196 51.196 0 013.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 00-6 0v-.113c0-.794.609-1.428 1.364-1.452zm-.355 5.945a.75.75 0 10-1.5.058l.347 9a.75.75 0 101.499-.058l-.346-9zm5.48.058a.75.75 0 10-1.498-.058l-.347 9a.75.75 0 001.5.058l.345-9z"
-                                                              clip-rule="evenodd"></path>
-                                                    </svg>
-                                                </button>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                        <div class="table" id="table">
+                            
                         </div>
                     </div>
                 </div>
@@ -250,9 +202,94 @@
     <img src="~/wave.svg" alt="" />
 </div>
 @section Scripts{ 
-<script>
-    $("form").submit(function () {
-        window.location.href = "/Authentication/AuthIndex";
+    <script>
+    $(document).ready(function () {
+        console.log("Document loaded.");
+        console.log( @ViewBag.testPercent);
+        console.log(@ViewBag.salaryPercent);
+        $("#table").load("/Budget/RecentExpense");
     });
-</script>
+    $("#logout").click(function () {
+        console.log("Logout Click");
+        window.location.href = "/Authentication/Logout";
+    });
+    $("#createBudget").click(function () {
+        console.log("Create budget");
+        var name = $("#newBudget").val();
+        var amount = $("#newBudgetAmount").val();
+        const _request = {
+            Name: name,
+            Amount:amount
+        };
+        $.ajax({
+            url: '/Budget/BudgetInsertion',
+            type: 'POST',
+            dataType: 'json',
+            data: { request: _request },
+            success: function (response) {
+                console.log({ response });
+                var message = response.response;
+                if (message == "insertion_done") {
+                    console.log(message);
+                    Toastify({
+                        text: "Successfully created.",
+                        duration: 3000
+                    }).showToast();
+                    $("#newBudget").val("");
+                    $("#newBudgetAmount").val("");
+                    $("#newBudget").focus();
+                } else {
+                    console.log(message);
+                    Toastify({
+                        text: "Fail to create.",
+                        duration: 3000
+                    }).showToast();
+                    $("#newBudget").val("");
+                    $("#newBudgetAmount").val("");
+                    $("#newBudget").focus();
+                }
+            }
+        });
+    });
+    $("#addExpense").click(function () {
+        console.log("Add Expense ");
+        var name = $("#newExpense").val();
+        var amount = $("#newExpenseAmount").val();
+        var category = $('#category').find(":selected").text().trim();
+        const _request = {
+            Name: name,
+            Amount: amount,
+            Category: category
+        }
+        $.ajax({
+            url:"/Budget/ExpenseInsertion",
+            type: "POST",
+            dataType: "json",
+            data: { request: _request },
+            success: function (response) {
+                console.log({ response });
+                var message = response.response;
+                if (message == "insertion_done") {
+                    console.log(message);
+                    Toastify({
+                        text: "Successfully created.",
+                        duration: 3000
+                    }).showToast();
+                    $("#newExpense").val("");
+                    $("#newExpenseAmount").val("");
+                    $("#newExpense").focus();
+                } else {
+                    console.log(message);
+                    Toastify({
+                        text: "Fail to add.",
+                        duration: 3000
+                    }).showToast();
+                    $("#newExpense").val("");
+                    $("#newExpenseAmount").val("");
+                    $("#newExpense").focus();
+                }
+            }
+        });
+    });
+    </script>
 }
